I finish header menus

--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,20 @@
 </head>
 <body>
   <header class="h-25 w-full border flex justify-center">
-    <div class="box-log mr-auto ml-5">
-        <img src="./images/logo-university-of-manchester.png" alt="">
+    <div class="box-log mr-auto ml-14 flex items-center ">
+        <img src="./images/logo-university-of-manchester.png" alt="" class="h-17 self-center">
     </div>
-    <div class="box-menu flex border gap-3">
+    <div class="box-menu flex  gap-3  justify-evenly items-center text-2xl w-[60%] mr-6 text-gray-700">
+        <div class="submenu"><img src="./images/icon-home-25px-949699.png" alt=""></div>
         <div class="submenu">Study</div>
         <div class="submenu">Research</div>
         <div class="submenu">Collabarate</div>
         <div class="submenu">About</div>
         <div class="submenu">Connect</div>
     </div>
-    <div class="box-search ml-auto">
-        <p>search</p>
+    <div class="box-search rounded shadow ml-auto border border-gray-300 w-[10%] h-[50%] text-center self-center mr-12 flex   justify-evenly items-center">
+        <img src="./images/icon-search-mobile.png" alt="" class="h-5">
+        <p class="text-2xl content-center text-gray-500">search</p>
     </div>
   </header>
 </body>
