--- a/src/index.html
+++ b/src/index.html
@@ -24,5 +24,19 @@
         <p class="text-2xl content-center text-gray-500">search</p>
     </div>
   </header>
+  <div class="mid-body h-100 w-full bg-[url('./images/UoMmakethe.jpeg')] bg-contain bg-cover flex items-">
+     <div class="subPart  w-[30%]  h-[70%]  content-end ml-20 mt-2">
+        <p class="bg-white text-black w-[80%] text-3xl pl-2">
+            One of the world's
+            top 50 universities
+        </p>
+        <p class="bg-white text-black w-[90%]  flex content-center pl-2 pt-1 text[10px]">
+            We are 46th in the latest Academic Ranking of World Universities.
+        </p>
+        <div class=" bg-purple-700 h-12 w-40  text-center content-center text-white cursor-pointer hover:bg-purple-600">
+            find out more
+        </div>
+     </div>
+  </div>
 </body>
 </html>
