--- a/src/index.html
+++ b/src/index.html
@@ -38,5 +38,22 @@
         </div>
      </div>
   </div>
+  <div class="social-commons border h-200 w-full">
+    <div class="study border h-[50%] w-auto flex flex-col">
+        <h1 class="m-4 text-3xl ml-10">Study</h1>
+        <div class="border h-[70%] w-[90%] ml-10 m-4 flex gap-2">
+          <div class=" border h-auto w-[68%] bg-pink-400 text-white  ">
+            <h1 class="text-2xl mt-1">Course and programme finder</h1> <br>
+                 <div>
+                    <p class="ml-6 mt-3 text-amber-300 cursor-pointer hover:underline">Undergraduate courses (2026 entry)</p>
+                    <p class="ml-6 mt-3 text-amber-300 cursor-pointer hover:underline">Undergraduate courses (2025 entry)</p>
+                    <p class="ml-6 mt-3 text-amber-300 cursor-pointer hover:underline">Taught master's courses</p>
+                    <p class="ml-6 mt-3 text-amber-300 cursor-pointer hover:underline">Postgraduate research areas</p>
+                 </div>
+          </div>
+          <div class=" border h-auto w-[30%]"></div>
+        </div>
+    </div>
+  </div>
 </body>
 </html>
