--- a/src/index.html
+++ b/src/index.html
@@ -39,12 +39,12 @@
      </div>
   </div>
   <div class="social-commons border h-200 w-full">
-    <div class="study  h-[50%] w-auto flex flex-col">
-        <h1 class="m-4 text-3xl ml-10">Study</h1>
-        <div class=" h-[70%] w-[90%] ml-10 m-4 flex gap-2">
+    <div class="study  h-[50%] w-auto flex flex-col border">
+        <h1 class="m-4 text-3xl ml-15">Study</h1>
+        <div class=" h-[70%] w-[90%] ml-15 m-4 flex gap-2 ">
           <div class="  h-auto w-[68%] bg-violet-950 text-white  ">
             
-            <div class="flex  w-full h-[90%]">
+            <div class="flex   w-full h-[90%]">
                  <div class="   w-[50%] h-auto">
                     <h1 class="text-2xl mt-1">Course and programme finder</h1> <br>
                     <p class="ml-6 mt-3 text-amber-300 cursor-pointer hover:underline">Undergraduate courses (2026 entry)</p>
@@ -61,8 +61,13 @@
                  </div>
                  </div>
           </div>
-          <div class=" border h-auto w-[30%]"></div>
+          
         </div>
+        <div class="  h-auto w-[30%] bg-gray-200 rounded">
+                    <h1 class="m-2 text-3xl mt-4">Clear 2025</h1>  
+                    <p class="m-2 font-bold mt-10">We have few  courses available in clearing</p> 
+                    <button class="m-2 text-violet-600 mt-4 hover:underline hover:cursor-pointer">browser vacancies</button> 
+          </div>
     </div>
   </div>
 </body>
